okay let me know if you see it

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="#flowers">Flowers</a>
         <a href="#occasions">Ocassions</a>
         <a href="#hampers_gifts">Hampers & Gifts</a>
+        <a href="#Contact_us">Contact form</a>
     </nav>
     </header>
 </body>
