--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Daisy Dreams</title>
 </head>
 <body>
     <header>
-    <img src="./Images/logo.png" alt="Daisy_Dreams">
+    <img class="logo" src="./Images/logo.png" alt="Daisy_Dreams">
     <br><br><br>
     <nav class="navbar">
         <a href="#flowers">Flowers</a>
         <a href="#occasions">Ocassions</a>
         <a href="#hampers_gifts">Hampers & Gifts</a>
+        <a href="#special_offers">Special Offers</a>
     </nav>
     </header>
 </body>
