--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Daisy Dreams</title>
 </head>
-<body>
-    <header>
-    <img class="logo" src="./Images/logo.png" alt="Daisy_Dreams">
+<header>
     <br><br><br>
-    <nav class="navbar">
-        <a href="#flowers">Flowers</a>
-        <a href="#occasions">Ocassions</a>
-        <a href="#hampers_gifts">Hampers & Gifts</a>
+    <nav class="nav">
+        <img class="logo" src="./Images/logo.png" alt="Daisy_Dreams">
+        <ul>
+           <li><a href="#home">Home</a></li> 
+           <li><a href="#flowers">Flowers</a></li> 
+           <li><a href="#occasions">Ocassions</a></li>
+           <li><a href="#hampers_gifts">Hampers & Gifts</a></li>
+           <li><a href="#Contact">Contact</a></li> 
+        </ul>
     </nav>
     </header>
+<body>
 </body>
 </html>
