update on the webpage

--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@
             <a href="#" class="fas fa-shopping-cart"></a>
             <a href="#" class="fas fa-user"></a>
         </div>
-
+</header>
     <!--header end-->
 
     <!--home starts-->
+
+    <section class="home" id="home">
+
+        <div class="content">
+            <h3>fresh flowers</h3>
+            <span>fresh & beautiful flowers</span>
+            <p>collection transport you to a world of natural beauty and artistry. Take home a piece of nature's splendor, and let its fresh and captivating presence brighten your day or someone else's. Experience the joy of flowers, handpicked and arranged with love, just for you.</p>
+            <a href="#" class="btn" >shop now</a>
+        </div>
+    </section>
     
     <!--home ends-->
 </body>
